--- a/TaskList.Service/TaskList.Service/TaskList.Service.csproj
+++ b/TaskList.Service/TaskList.Service/TaskList.Service.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{5AB912D0-B39D-4324-AEB5-03B0D3013B60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaskList.Servise</RootNamespace>
-    <AssemblyName>TaskList.Servise</AssemblyName>
+    <RootNamespace>TaskList.Service</RootNamespace>
+    <AssemblyName>TaskList.Service</AssemblyName>
     <DefaultLanguage>ru-RU</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
@@ -120,9 +120,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Properties\TaskList.Servise.rd.xml" />
+    <EmbeddedResource Include="Properties\TaskList.Service.rd.xml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
