--- a/UWP/TaskList.Data/TaskList.Data.csproj
+++ b/UWP/TaskList.Data/TaskList.Data.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TaskList.DataModel\TaskList.DataModel.csproj" />
     <ProjectReference Include="..\TaskList.Interface\TaskList.Interface.csproj" />
   </ItemGroup>
 
