--- a/UWP/TaskList.ViewModel/TaskList.ViewModel.csproj
+++ b/UWP/TaskList.ViewModel/TaskList.ViewModel.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskList.Interface\TaskList.Interface.csproj" />
+    <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj" />
+  </ItemGroup>
+
 </Project>
