--- a/UWP/TaskList.Service/TaskList.Service.csproj
+++ b/UWP/TaskList.Service/TaskList.Service.csproj
@@ -10,4 +10,11 @@
     <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Windows.Foundation.UniversalApiContract">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\References\10.0.17134.0\Windows.Foundation.UniversalApiContract\6.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+      <IsWinMDFile>true</IsWinMDFile>
+    </Reference>
+  </ItemGroup>
+
 </Project>
