Added Navigate in NavigationService and IIndex

--- a/UWP/TaskList.Service/TaskList.Service.csproj
+++ b/UWP/TaskList.Service/TaskList.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TaskList.DataModel\TaskList.DataModel.csproj" />
     <ProjectReference Include="..\TaskList.Interface\TaskList.Interface.csproj" />
     <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj" />
