--- a/UWP/TaskList.Data/TaskList.Data.csproj
+++ b/UWP/TaskList.Data/TaskList.Data.csproj
@@ -5,8 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TaskList.DataModel\TaskList.DataModel.csproj" />
     <ProjectReference Include="..\TaskList.Interface\TaskList.Interface.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataJson\" />
   </ItemGroup>
 
 </Project>
