--- a/UWP/TaskList/TaskList.csproj
+++ b/UWP/TaskList/TaskList.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>TaskList</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17134.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -126,11 +126,12 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="NewTaskPage.xaml.cs">
+    <Compile Include="View\NewTaskPage.xaml.cs">
       <DependentUpon>NewTaskPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestViewModel.cs" />
+    <Compile Include="TestViewModel\TestNewTaskViewModel.cs" />
     <Compile Include="TestViewModel\TestTaskListViewModel.cs" />
     <Compile Include="View\TaskListPage.xaml.cs">
       <DependentUpon>TaskListPage.xaml</DependentUpon>
@@ -190,7 +191,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="NewTaskPage.xaml">
+    <Page Include="View\NewTaskPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
