--- a/UWP/TaskList.Interface/TaskList.Interface.csproj
+++ b/UWP/TaskList.Interface/TaskList.Interface.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskList.DataModel\TaskList.DataModel.csproj" />
+    <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj" />
+  </ItemGroup>
+
 </Project>
