--- a/UWP/TaskList.Service/TaskList.Service.csproj
+++ b/UWP/TaskList.Service/TaskList.Service.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <Compile Include="NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskService.cs" />
     <EmbeddedResource Include="Properties\TaskList.Service.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -144,6 +145,10 @@
     <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj">
       <Project>{eef4b07d-5a8d-4cdd-8e74-015eaab51ab5}</Project>
       <Name>TaskList.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TaskList.ViewModel\TaskList.ViewModel.csproj">
+      <Project>{8416E375-2C96-42DA-872C-890F688E0C64}</Project>
+      <Name>TaskList.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
