--- a/UWP/TaskList.ViewModel/TaskList.ViewModel.csproj
+++ b/UWP/TaskList.ViewModel/TaskList.ViewModel.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Moq" Version="4.10.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TaskList.Interface\TaskList.Interface.csproj" />
     <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj" />
   </ItemGroup>
