--- a/UWP/TaskList/TaskList.csproj
+++ b/UWP/TaskList/TaskList.csproj
@@ -123,9 +123,11 @@
     <Compile Include="GradientPlanePicker.xaml.cs">
       <DependentUpon>GradientPlanePicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ImportanceConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UrgencyConverter.cs" />
     <Compile Include="View\NewTaskPage.xaml.cs">
       <DependentUpon>NewTaskPage.xaml</DependentUpon>
     </Compile>
