--- a/UWP/TaskList.Service.Test1/TaskList.Service.Test1.csproj
+++ b/UWP/TaskList.Service.Test1/TaskList.Service.Test1.csproj
@@ -4,20 +4,20 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{01065DF8-BA8C-41D5-B436-B249A5E1FAF2}</ProjectGuid>
+    <ProjectGuid>{D1167BDA-D525-4FCB-A84C-0D6967EA54FD}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TaskList</RootNamespace>
-    <AssemblyName>TaskList</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
+    <RootNamespace>TaskList.Service.Test1</RootNamespace>
+    <AssemblyName>TaskList.Service.Test1</AssemblyName>
+    <DefaultLanguage>ru-RU</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
+    <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
     <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>TaskList_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>TaskList.Service.Test1_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">$(VisualStudioVersion)</UnitTestPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -116,35 +116,29 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="CompositionRoot.cs" />
-    <Compile Include="GradientPlanePicker.xaml.cs">
-      <DependentUpon>GradientPlanePicker.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\NewTaskPage.xaml.cs">
-      <DependentUpon>NewTaskPage.xaml</DependentUpon>
-    </Compile>
+    <SDKReference Include="TestPlatform.Universal, Version=$(UnitTestPlatformVersion)" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestViewModel.cs" />
-    <Compile Include="TestViewModel\TestNewTaskViewModel.cs" />
-    <Compile Include="TestViewModel\TestTaskListViewModel.cs" />
-    <Compile Include="View\TaskListPage.xaml.cs">
-      <DependentUpon>TaskListPage.xaml</DependentUpon>
+    <Compile Include="UnitTestApp.xaml.cs">
+      <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UnitTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ApplicationDefinition Include="UnitTestApp.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="TaskList_TemporaryKey.pfx" />
+    <None Include="TaskList.Service.Test1_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties\Default.rd.xml" />
+    <Content Include="Properties\UnitTestApp.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
@@ -154,51 +148,36 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.3</Version>
     </PackageReference>
+    <PackageReference Include="Moq">
+      <Version>4.10.1</Version>
+    </PackageReference>
+    <PackageReference Include="MSTest.TestAdapter">
+      <Version>1.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="MSTest.TestFramework">
+      <Version>1.3.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TaskList.Data\TaskList.Data.csproj">
-      <Project>{f6dfe006-184a-4964-bd94-4312a1e6bb71}</Project>
-      <Name>TaskList.Data</Name>
+    <ProjectReference Include="..\TaskList.DataModel\TaskList.DataModel.csproj">
+      <Project>{65fb1933-bdf1-49ce-9939-dbcf3f67bdd0}</Project>
+      <Name>TaskList.DataModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\TaskList.Interface\TaskList.Interface.csproj">
       <Project>{a083e670-cabe-4953-9715-70dc484a78d5}</Project>
       <Name>TaskList.Interface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TaskList.Model\TaskList.Model.csproj">
+      <Project>{eef4b07d-5a8d-4cdd-8e74-015eaab51ab5}</Project>
+      <Name>TaskList.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TaskList.Service\TaskList.Service.csproj">
       <Project>{39644eca-1ab0-4de4-b383-2ef610efd0fb}</Project>
       <Name>TaskList.Service</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TaskList.ViewModel\TaskList.ViewModel.csproj">
-      <Project>{8416e375-2c96-42da-872c-890f688e0c64}</Project>
-      <Name>TaskList.ViewModel</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="GradientPlanePicker.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="MainPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\NewTaskPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="View\TaskListPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
